# checkupy

./: Master document equazioni_CHECKUP_rev.4_july2024.docx  Master document equazioni_health_station_rev.3.docx  README.md  bia_sample.json  prove_bia.xlsx  pyproject.toml  requirements.txt  risultati.csv  run.py
checkupy/: __init__.py  checkupy.py  onnx_models.py
checkupy/assets/: inbody.onnx  model2_100x2_vs_inbody.onnx
pyakern/: __init__.py  corrections.py  equations.py  utils.py
pyakern/src/: equations.py
pyakern/test/: test_data.txt
src/: __init__.py  checkupy.py  utils.py
test/: data_example.xlsx  test.py  test_data.csv  test_data.txt
