[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyakern"
authors = [{ name="Luca Zoffoli", email="lzoffoli@technogym.com" }]
description = "A small package to simplify data processing in python."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "4"
dynamic = ["readme", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = "README.html"}

[project.urls]
"Homepage" = "https://github.com/ZofTG/pyakern"
"Bug Tracker" = "https://github.com/ZofTG/pyakern/issues"
